--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,15 @@
 /* Other rules */
+* {
+  box-sizing: border-box;
+}
+
+header {
+  width: 100%;
+  padding: 0 100px;
+  border-bottom: 1px solid #5bcbd1;
+}
+
+header img {
+  width: 80px;
+  padding: 15px 0;
+}
