--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,31 @@ header img {
   padding: 15px 0;
 }
 
-/* Offer */
+/* Content */
+
+.content {
+  width: 90%;
+  margin: 100px auto 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.offer-link {
+  width: calc((100% - 100px) / 5);
+  text-decoration: none;
+}
+
+.item {
+  width: 100%;
+}
 
 .offer-image {
-  width: 100px;
+  width: 100%;
+  height: 355px;
+  object-fit: cover;
+}
+
+.offer-description p {
+  color: black;
 }
