--- a/src/App.css
+++ b/src/App.css
@@ -33,12 +33,14 @@ header img {
   width: 100%;
 }
 
-.offer-image {
+.offers-image {
   width: 100%;
   height: 355px;
   object-fit: cover;
 }
 
-.offer-description p {
+.offers-description p {
   color: black;
 }
+
+/* Offer */
