--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,32 @@
   box-sizing: border-box;
 }
 
+h3 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
 header {
   width: 100%;
   padding: 0 100px;
   border-bottom: 1px solid #5bcbd1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header nav {
+  width: 20%;
+  display: flex;
+  justify-content: space-around;
+}
+
+header nav a {
+  color: #0eadb6;
+  text-decoration-line: none;
+  border: 1px solid #0eadb6;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 header img {
@@ -118,4 +140,31 @@ header img {
   border-radius: 5px;
   padding: 10px 0;
   border: none;
+}
+
+/* signup */
+
+.signup {
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+}
+
+.signup form {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.signup form > input {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 20px;
+}
+
+.signup form div {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 20px;
 }
