--- a/src/App.css
+++ b/src/App.css
@@ -144,26 +144,26 @@ header img {
 
 /* signup */
 
-.signup {
+.signup-login {
   display: flex;
   justify-content: center;
   margin-top: 80px;
 }
 
-.signup form {
+.signup-login form {
   width: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.signup form > input {
+.signup-login form > input {
   width: 100%;
   height: 40px;
   margin-bottom: 20px;
 }
 
-.signup form div {
+.signup-login form div {
   width: 100%;
   height: 40px;
   margin-bottom: 20px;
