--- a/src/App.css
+++ b/src/App.css
@@ -17,14 +17,44 @@ header {
   align-items: center;
 }
 
+header input {
+  width: 40%;
+  height: 30px;
+  background-color: #f5f6f7;
+  border: 1px solid #f5f6f7;
+  border-radius: 5px;
+  color: rgba(231, 232, 232, 0.1);
+}
+
 header nav {
-  width: 20%;
+  width: 30%;
   display: flex;
   justify-content: space-around;
 }
 
 header nav a {
   color: #0eadb6;
+  text-decoration-line: none;
+  border: 1px solid #0eadb6;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+header nav button:first-child {
+  background-color: #c2185b;
+  color: white;
+  border: none;
+  text-decoration-line: none;
+  border: 1px solid #c2185b;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+header nav button:nth-child(2) {
+  cursor: pointer;
+  background-color: #0eadb6;
+  color: white;
   text-decoration-line: none;
   border: 1px solid #0eadb6;
   padding: 10px;
