--- a/src/App.css
+++ b/src/App.css
@@ -172,7 +172,7 @@ header img {
   border: none;
 }
 
-/* signup */
+/* signup-login */
 
 .signup-login {
   display: flex;
@@ -197,4 +197,8 @@ header img {
   width: 100%;
   height: 40px;
   margin-bottom: 20px;
+}
+
+.wrong {
+  color: red;
 }
