--- a/src/App.css
+++ b/src/App.css
@@ -17,15 +17,6 @@ header {
   align-items: center;
 }
 
-header input {
-  width: 40%;
-  height: 30px;
-  background-color: #f5f6f7;
-  border: 1px solid #f5f6f7;
-  border-radius: 5px;
-  color: rgba(231, 232, 232, 0.1);
-}
-
 header nav {
   width: 30%;
   display: flex;
@@ -65,6 +56,21 @@ header img {
   width: 80px;
   padding: 15px 0;
   cursor: pointer;
+}
+
+/* Filter */
+
+.filter {
+  width: 40%;
+  height: 30px;
+}
+
+header input {
+  width: 100%;
+  height: 100%;
+  background-color: #f5f6f7;
+  border: 1px solid #f5f6f7;
+  border-radius: 5px;
 }
 
 /* Hero */
