--- a/src/App.css
+++ b/src/App.css
@@ -285,13 +285,38 @@ header img {
 
 /* PUBLISH  */
 
-.publish-form {
-  margin-top: 100px;
+.publish {
+  width: 100%;
+  background-color: #ebedee;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 50px 0;
+}
+
+.publish-form {
+  width: 90%;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
 }
 
 .publish-input-wrapper {
   margin-top: 30px;
+}
+
+.publish-input-container {
+  display: flex;
+  width: 95%;
+  height: 75px;
+  margin: 0 20px;
+}
+
+.publish-input-container div {
+  width: 50%;
+}
+
+.publish-input-container input,
+textarea {
+  width: 100%;
 }
