--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ h3 {
 
 header {
   width: 100%;
-  height: 120px;
+  height: 180px;
   padding: 0 100px;
   border-bottom: 1px solid #5bcbd1;
   display: flex;
@@ -102,6 +102,21 @@ header img {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+}
+
+.sort-by-price {
+  width: 65%;
+  height: 20px;
+  display: flex;
+}
+
+.sort-by-price input {
+  width: 20%;
+  height: 20px;
+}
+
+.sort-by-price label {
+  margin: 0 10px;
 }
 
 /* Hero */
