--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ h3 {
 
 header {
   width: 100%;
-  height: 180px;
+  height: 120px;
   padding: 0 100px;
   border-bottom: 1px solid #5bcbd1;
   display: flex;
@@ -72,6 +72,7 @@ header img {
   background-color: #f5f6f7;
   border: 1px solid #f5f6f7;
   border-radius: 5px;
+  padding-left: 10px;
 }
 
 .price-filter-container {
@@ -304,6 +305,7 @@ header img {
   color: white;
   border: 1px solid #0eadb6;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .submit-signup-button {
@@ -311,6 +313,7 @@ header img {
   color: white;
   border: 1px solid #0eadb6;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 /* PUBLISH  */
@@ -394,15 +397,67 @@ textarea {
 
 /* Payment */
 
+.payment-form-container {
+  width: 100%;
+  height: 80vh;
+  background-color: #ebedee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .form-payment {
-  width: 30%;
-  margin: 150px auto;
+  width: 40%;
+  height: 80%;
+  background-color: #fff;
+  padding: 20px;
 }
 
 .form-payment h6 {
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+  font-size: 14px;
+  color: #999999;
 }
 
 .form-payment li {
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+  color: #666666;
+  font-size: 16px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-payment-total {
+  padding: 30px 0;
+  border-top: #999999 1px solid;
+  border-bottom: #999999 1px solid;
+  display: flex;
+  font-size: 16px;
+  color: #111111;
+  font-weight: 700;
+  justify-content: space-between;
+}
+
+.cardElement {
+  margin-top: 30px;
+  padding: 10px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.container-submit-payment-button {
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.container-submit-payment-button button {
+  cursor: pointer;
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #04bb6a;
+  border: 1px solid #04bb6a;
 }
